--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@ __pycache__/
 *.py[cod]
 *$py.class
 
+# SQL Queries
+*.sql
+
 # C extensions
 *.so
 
@@ -127,3 +130,4 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+.DS_Store
